[package]
name = "backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.*"
axum-server = { version = "0.7.*", features = ["tls-rustls"] }
axum = { version = "0.8.*", features = ["json"] }
chrono = { version = "0.4.2", features = ["serde"] }
clap = {version = "4.1.6", features = ["derive", "env"] }
env_logger = "0.11.*"
hex-literal = { version="0.4.*" }
log = "0.4.17"
rand = "0.9.*"
rand_distr = "0.5.*"
rustfft="*"
serde_json = "1.0.85"
serde = {version = "1.0.145", features = ["derive"] }
thiserror = "2.*"
tokio-util = { version = "0.7.7" }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.*", features = ["full"] }
uhd= { git="https://github.com/centowen/uhd-rust.git", branch="remove_enumerate_registers" }
askama = "0.12"

[dev-dependencies]
hyper = "1.*"
mime = "0.3.17"
tower = "0.5.*"
