[package]
name = "backend"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
askama = "0.14"
async-trait = "0.1.*"
axum = { version = "0.8.*", features = ["json", "ws"] }
axum-server = { version = "0.7.*", features = ["tls-rustls"] }
base64 = { version = "0.22.1" }
chrono = { version = "0.4.*", features = ["serde"] }
clap = { version = "4.*", features = ["derive", "env"] }
deadpool-sqlite = { version = "0.10", features = ["rt_tokio_1"] }
env_logger = "0.11.*"
hex-literal = "1.*"
log = "0.4"
oauth2 = "5.*"
rand = "0.9.*"
rand_distr = "0.5.*"
refinery = { version = "0.8.*", features = ["rusqlite"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "blocking"] }
rusqlite = { version = "0.33.0", features = ["bundled"] }
rustfft="*"
serde = {version = "1.*", features = ["derive"] }
serde_json = "1.*"
thiserror = "2.*"
tokio = { version = "1.*", features = ["macros", "rt-multi-thread"] }
tokio-util = "0.7.*"
toml = "0.8.*"
tower-http = { version = "0.6.*", features = ["full"] }
uhd = "0.3.*"
