[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#astro = "2.0.0"
async-trait = "0.1.62"
#async-std = "1.12.0"
clap = {version = "4.1.6", features = ["derive"] }
chrono = { version = "0.4.2", features = ["serde"] }
common = { version = "0.1.0", path = "../common" }
env_logger = "0.10.0"
log = "0.4.17"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = {version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.7" }
hex-literal = { version="0.3.4" }
warp = { version = "0.3.3" }
uhd= { git="https://github.com/centowen/uhd-rust.git", branch="remove_enumerate_registers" }
rustfft="*"
thiserror = "1.0.40"

[dev-dependencies]

