[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.51"
axum-server = { version = "0.5.0", features = ["tls-rustls"] }
axum = { version = "0.6.18", features = ["json", "headers"] }#astro = "2.0.0"
chrono = { version = "0.4.2", features = ["serde"] }
clap = {version = "4.1.6", features = ["derive", "env"] }
common = { version = "0.1.0", path = "../common" }
env_logger = "0.10.0"
hex-literal = { version="0.4.1" }
log = "0.4.17"
rand = "0.8.5"
rand_distr = "0.4.3"
rustfft="*"
serde_json = "1.0.85"
serde = {version = "1.0.145", features = ["derive"] }
thiserror = "1.0.40"
tokio-util = { version = "0.7.7" }
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["full"] }
uhd= { git="https://github.com/centowen/uhd-rust.git", branch="remove_enumerate_registers" }
askama = { version = "0.12", features = ["with-axum"]}
askama_axum = "0.4.0"

[dev-dependencies]
hyper = "0.14.27"
mime = "0.3.17"
tower = "0.4.13"

