[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
assert_float_eq = "1.1.3"
chrono = { version = "0.4.2", features = ["serde"] }
common = { version = "0.1.0", path = "../common" }
console_error_panic_hook = { version = "0.1.6" }
gloo-net = { version = "0.2", features = ["json"] }
log = "0.4.17"
serde_json = "1.0.85"
serde = { version = "=1.0.145", features = ["derive"] }
wasm-bindgen = "0.2.83"
wasm-logger = { version = "0.2.0" }
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew" }
web-sys = { version = "0.3.60", features = ["HtmlSelectElement", "HtmlInputElement", "HtmlCanvasElement"] }
#yew = { version="0.20.0" }
#yew-router = { version="0.17.0" }
regex = "1.7.1"
plotters = { version = "0.3.4" }
plotters-canvas = { version = "0.3.0" }

[dev-dependencies]
approx = "0.5.1"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.60"
features = ["console"]
