[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
common = { version = "0.1.0", path = "../common" }
console_error_panic_hook = { version = "0.1.6" }
gloo-net = { version = "0.2", features = ["json"] }
log = "0.4.17"
serde_json = "1.0.85"
serde = { version = "=1.0.145", features = ["derive"] }
wasm-bindgen = "0.2.67"
wasm-logger = { version = "0.2.0" }
#web_logger = "0.2.0"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew" }

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3.60"
features = [ "console" ]
