[package]
name = "uhd_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uhd="*"
num-complex = "0.4.0"
libc = "0.2"
thiserror = "1.0.24"
anyhow = "1.0.39"
tap = "1.0.1"
log = "0.4.13"
env_logger = "0.8.3"
rustfft="*"
plotters = "0.3.4"
median = "0.3.2"
